--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
         <a href="#" class="fab fa-medium"></a>
     </div>
 
-    <div class="credit"> created by Ashok kumar | all rights reserved 2022! </div>
+    <div class="credit"> created by Rituraj kumar | all rights reserved 2022! </div>
 
 </section>
 
